@@ -31,6 +31,7 @@
 	Bug #7248  There is already an open DataReader associated with this Connection which must 
 	Bug #11991 ExecuteScalar 	
 	Bug #14592 Wrong column length returned for VARCHAR UTF8 columns 	
+	Bug #18391 Better error handling for the .NET class "MySqlCommand" needed. 	
 	
 x-xx-05 - Version 1.0.7
 
